<resources>
    <string name="app_name">Fitness GURU</string>
    <string name="title_track_details">Track_Details</string>
    <string name="title_activity_photo_detail">Photo Detail</string>
    <string name="RunTitle">Run Tracker</string>
    <string name="RunScreenStopButton">STOP</string>
    <string name="RunScreenResetButton">RESET</string>
    <string name="RunScreenTextCurrentSpeed">Current Speed</string>
    <string name="RunScreenAverageSpeedText">Average Speed</string>
    <string name="RunScreenDistance">Distance</string>
    <string name="RunScreenStart">START</string>
    <string name="Track2_Name">CentralPark</string>
    <string name="Track_1">UCD</string>
    <string name="ContentDescription_UCDTrack">Image for Track 1</string>
    <string name="Track2_Image">Track2 Image</string>
    <string name="VideoIcon">Video Icon</string>
    <string name="Stats_Tile">STATS</string>
    <string name="Run_Title">RUN</string>
    <string name="Content_Description_MapView">Map View</string>
    <string name="ContentDescription_ImageViewIcon">Image View Icon</string>
    <string name="Activity_Main_Tracks">Tracks</string>
    <string name="in_this_month_you_have_travelled">In this month, you have travelled</string>
    <string name="_0">0</string>
    <string name="in">In</string>

    <string name="click_a_photo_to_share_stats_with_your_friends">Click a photo to share stats with your friends!</string>
    <string name="celebrate">Celebrate</string>
</resources>
