<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrackDetails">

    <ImageView
        android:id="@+id/imageView_Video"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/VideoIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/youtube_icon" />

    <ImageView
        android:id="@+id/imageView_Photo"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/ContentDescription_ImageViewIcon"
        app:layout_constraintEnd_toEndOf="@+id/imageView_Video"
        app:layout_constraintStart_toStartOf="@+id/imageView_Video"
        app:layout_constraintTop_toBottomOf="@+id/imageView_Video"
        app:srcCompat="@drawable/images_icon" />

    <TextView
        android:id="@+id/textView_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Stats_Tile"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView_Photo"
        app:layout_constraintStart_toStartOf="@+id/imageView_Photo"
        app:layout_constraintTop_toBottomOf="@+id/imageView_Photo" />

    <ImageView
        android:id="@+id/mapView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/Content_Description_MapView"
        android:src="@drawable/maps_icon"
        app:layout_constraintEnd_toEndOf="@+id/textView_stats"
        app:layout_constraintStart_toStartOf="@+id/textView_stats"
        app:layout_constraintTop_toBottomOf="@+id/textView_stats" />

    <TextView
        android:id="@+id/textView_run"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Run_Title"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView_stats"
        app:layout_constraintStart_toStartOf="@+id/textView_stats"
        app:layout_constraintTop_toBottomOf="@+id/mapView" />


</android.support.constraint.ConstraintLayout>