<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity_Screen2">

    <ImageView
        android:id="@+id/track2_Image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/Track2_Image"
        app:layout_constraintEnd_toEndOf="@+id/ucd_image"
        app:layout_constraintStart_toStartOf="@+id/ucd_image"
        app:layout_constraintTop_toBottomOf="@+id/ucd_image"
        app:srcCompat="@drawable/blackrock_park" />

    <ImageView
        android:id="@+id/ucd_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/ContentDescription_UCDTrack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ucd" />

    <Button
        android:id="@+id/button_ucd"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_rounded"
        android:text="@string/Track_1"
        app:layout_constraintBottom_toBottomOf="@+id/ucd_image"
        app:layout_constraintEnd_toEndOf="@+id/button_Track2"
        app:layout_constraintStart_toStartOf="@+id/button_Track2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_Track2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_rounded"
        android:text="@string/Track2_Name"
        app:layout_constraintBottom_toBottomOf="@+id/track2_Image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/track2_Image"
        app:layout_constraintTop_toTopOf="@+id/track2_Image" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="More to Follow Soon..."
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/track2_Image" />

</android.support.constraint.ConstraintLayout>